--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "infrastructure",
   "version": "0.0.0-development",
+  "private": true,
   "scripts": {
     "cdk": "cdk",
     "lint": "eslint .",
