--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudfront": "1.83.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.83.0",
     "@aws-cdk/aws-codebuild": "1.83.0",
     "@aws-cdk/aws-codepipeline": "1.83.0",
     "@aws-cdk/aws-codepipeline-actions": "1.83.0",
@@ -36,6 +38,7 @@
     "@aws-cdk/core": "1.83.0",
     "@aws-cdk/custom-resources": "1.83.0",
     "@aws-cdk/pipelines": "1.83.0",
+    "@capraconsulting/webapp-deploy-lambda": "1.2.0",
     "@liflig/cdk": "1.29.3"
   }
 }
