--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.template.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.template.json
@@ -14,6 +14,22 @@
       "Metadata": {
         "aws:cdk:path": "cdkappref-build-core-prod-pipeline/cdkappref-prod/core/ExampleResource/Resource"
       }
+    },
+    "DemoParam641CC643": {
+      "Type": "AWS::SSM::Parameter",
+      "Properties": {
+        "Type": "String",
+        "Value": "hello world",
+        "Name": "/cdkappref/prod/demo",
+        "Tags": {
+          "Project": "liflig-cdk-app-reference",
+          "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
+          "StackName": "cdkappref-prod-core"
+        }
+      },
+      "Metadata": {
+        "aws:cdk:path": "cdkappref-build-core-prod-pipeline/cdkappref-prod/core/DemoParam/Resource"
+      }
     }
   },
   "Parameters": {
