--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
@@ -18,6 +18,7 @@
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-prod-core"
         },
+        "validateOnSynth": true,
         "assumeRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-deploy-role-001112238813-eu-west-1",
         "cloudFormationExecutionRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-cfn-exec-role-001112238813-eu-west-1",
         "stackTemplateAssetObjectUrl": "s3://cdk-liflig-assets-001112238813-eu-west-1/snapshot-value.json",
@@ -81,7 +82,8 @@
             "data": "CheckBootstrapVersion"
           }
         ]
-      }
+      },
+      "displayName": "cdkappref-build-core-prod-pipeline/cdkappref-prod/core"
     },
     "cdkapprefbuildcoreprodpipelinecdkapprefprodwebappC6460F7C.assets": {
       "type": "cdk:asset-manifest",
@@ -101,6 +103,7 @@
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-prod-webapp"
         },
+        "validateOnSynth": true,
         "assumeRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-deploy-role-001112238813-eu-west-1",
         "cloudFormationExecutionRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-cfn-exec-role-001112238813-eu-west-1",
         "stackTemplateAssetObjectUrl": "s3://cdk-liflig-assets-001112238813-eu-west-1/snapshot-value.json",
@@ -224,7 +227,8 @@
             "data": "CheckBootstrapVersion"
           }
         ]
-      }
+      },
+      "displayName": "cdkappref-build-core-prod-pipeline/cdkappref-prod/webapp"
     }
   }
 }
