--- a/__snapshots__/manifest.json
+++ b/__snapshots__/manifest.json
@@ -45,6 +45,7 @@
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-build-core-dev-pipeline"
         },
+        "validateOnSynth": false,
         "assumeRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-deploy-role-001112238813-eu-west-1",
         "cloudFormationExecutionRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-cfn-exec-role-001112238813-eu-west-1",
         "stackTemplateAssetObjectUrl": "s3://cdk-liflig-assets-001112238813-eu-west-1/snapshot-value.json",
@@ -257,7 +258,8 @@
             "data": "CheckBootstrapVersion"
           }
         ]
-      }
+      },
+      "displayName": "cdkappref-build-core-dev-pipeline"
     },
     "cdkappref-build-core-prod-pipeline.assets": {
       "type": "cdk:asset-manifest",
@@ -277,6 +279,7 @@
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-build-core-prod-pipeline"
         },
+        "validateOnSynth": false,
         "assumeRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-deploy-role-001112238813-eu-west-1",
         "cloudFormationExecutionRoleArn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-cfn-exec-role-001112238813-eu-west-1",
         "stackTemplateAssetObjectUrl": "s3://cdk-liflig-assets-001112238813-eu-west-1/snapshot-value.json",
@@ -489,7 +492,8 @@
             "data": "CheckBootstrapVersion"
           }
         ]
-      }
+      },
+      "displayName": "cdkappref-build-core-prod-pipeline"
     }
   }
 }
