--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-cdk/aws-events-targets": "1.107.0",
     "@aws-cdk/aws-iam": "1.107.0",
     "@aws-cdk/aws-lambda": "1.107.0",
+    "@aws-cdk/aws-rds": "1.107.0",
     "@aws-cdk/aws-s3": "1.107.0",
     "@aws-cdk/aws-ssm": "1.107.0",
     "@aws-cdk/aws-stepfunctions": "1.107.0",
