--- a/__snapshots__/cdkappref-build-core-prod-pipeline.template.json
+++ b/__snapshots__/cdkappref-build-core-prod-pipeline.template.json
@@ -156,6 +156,7 @@
       "Metadata": {
         "aws:cdk:path": "cdkappref-build-core-prod-pipeline/Pipeline/PrepareCdkSourceFn/Resource",
         "aws:asset:path": "asset.snapshot-value",
+        "aws:asset:is-bundled": false,
         "aws:asset:property": "Code"
       }
     },
@@ -2244,7 +2245,7 @@
     "BootstrapVersion": {
       "Type": "AWS::SSM::Parameter::Value<String>",
       "Default": "/cdk-bootstrap/liflig/version",
-      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store."
+      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
     }
   },
   "Rules": {
