--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
@@ -27,6 +27,11 @@
         "additionalDependencies": [
           "cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.assets"
         ],
+        "lookupRole": {
+          "arn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-lookup-role-001112238813-eu-west-1",
+          "requiresBootstrapStackVersion": 8,
+          "bootstrapStackVersionSsmParameter": "/cdk-bootstrap/liflig/version"
+        },
         "stackName": "cdkappref-prod-core"
       },
       "dependencies": [
@@ -112,6 +117,11 @@
         "additionalDependencies": [
           "cdkapprefbuildcoreprodpipelinecdkapprefprodwebappC6460F7C.assets"
         ],
+        "lookupRole": {
+          "arn": "arn:${AWS::Partition}:iam::001112238813:role/cdk-liflig-lookup-role-001112238813-eu-west-1",
+          "requiresBootstrapStackVersion": 8,
+          "bootstrapStackVersionSsmParameter": "/cdk-bootstrap/liflig/version"
+        },
         "stackName": "cdkappref-prod-webapp"
       },
       "dependencies": [
