--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-cdk": "1.140.0",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-deprecation": "1.3.2",
     "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.5.1",
     "ts-node": "10.4.0",
@@ -32,6 +33,7 @@
     "@aws-cdk/aws-events-targets": "1.140.0",
     "@aws-cdk/aws-iam": "1.140.0",
     "@aws-cdk/aws-lambda": "1.140.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.140.0",
     "@aws-cdk/aws-rds": "1.140.0",
     "@aws-cdk/aws-s3": "1.140.0",
     "@aws-cdk/aws-ssm": "1.140.0",
@@ -41,6 +43,6 @@
     "@aws-cdk/custom-resources": "1.140.0",
     "@aws-cdk/pipelines": "1.140.0",
     "@capraconsulting/webapp-deploy-lambda": "1.2.4",
-    "@liflig/cdk": "1.51.1"
+    "@liflig/cdk": "1.54.0-alpha.1"
   }
 }
