--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.template.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.template.json
@@ -3,13 +3,13 @@
     "ExampleResourceAC53F4AE": {
       "Type": "AWS::SSM::Parameter",
       "Properties": {
-        "Type": "String",
-        "Value": "prod",
         "Tags": {
           "Project": "liflig-cdk-app-reference",
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-prod-core"
-        }
+        },
+        "Type": "String",
+        "Value": "prod"
       },
       "Metadata": {
         "aws:cdk:path": "cdkappref-build-core-prod-pipeline/cdkappref-prod/core/ExampleResource/Resource"
@@ -18,14 +18,14 @@
     "DemoParam641CC643": {
       "Type": "AWS::SSM::Parameter",
       "Properties": {
-        "Type": "String",
-        "Value": "hello world",
         "Name": "/cdkappref/prod/demo",
         "Tags": {
           "Project": "liflig-cdk-app-reference",
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
           "StackName": "cdkappref-prod-core"
-        }
+        },
+        "Type": "String",
+        "Value": "hello world"
       },
       "Metadata": {
         "aws:cdk:path": "cdkappref-build-core-prod-pipeline/cdkappref-prod/core/DemoParam/Resource"
