--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
@@ -13,6 +13,7 @@
       "environment": "aws://001112238813/eu-west-1",
       "properties": {
         "templateFile": "cdkapprefbuildcoreprodpipelinecdkapprefprodcore53312EE6.template.json",
+        "terminationProtection": false,
         "tags": {
           "Project": "liflig-cdk-app-reference",
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
@@ -103,6 +104,7 @@
       "environment": "aws://001112238813/eu-west-1",
       "properties": {
         "templateFile": "cdkapprefbuildcoreprodpipelinecdkapprefprodwebappC6460F7C.template.json",
+        "terminationProtection": false,
         "tags": {
           "Project": "liflig-cdk-app-reference",
           "SourceRepo": "github/capralifecycle/liflig-cdk-app-reference",
