--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "infrastructure",
   "version": "0.0.0-development",
   "private": true,
+  "type": "module",
   "scripts": {
     "cdk": "cdk",
     "fetch-variables": "fetch-pipeline-variables",
@@ -19,7 +20,7 @@
     "eslint-plugin-deprecation": "3.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "3.3.3",
-    "ts-node": "10.9.2",
+    "tsx": "4.19.2",
     "typescript": "5.7.2"
   },
   "dependencies": {
