--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "commonjs",
-    "lib": ["es2018", "es2019"],
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "ES2022",
+    "moduleDetection": "force",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "strict": true,
-    "strictPropertyInitialization": false,
-    "esModuleInterop": true
+
+    "verbatimModuleSyntax": false,
+
+    "module": "preserve",
+    "noEmit": true,
+
+    "lib": ["es2022"]
   },
   "exclude": ["cdk.out"]
 }
