--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         run: npm run lint
 
       - name: verify cdk snapshots
-        run: npm run snapshots && git status && git add -N && git diff --exit-code
+        run: npm run snapshots && git status __snapshots__ && git add __snapshots__ --intent-to-add && git diff --exit-code __snapshots__
 
       - name: upload cdk source and metadata
         if: ${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
