chore: update snapshots for aws-cdk-lib

--- a/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
+++ b/__snapshots__/assembly-cdkappref-build-core-prod-pipeline-cdkappref-prod/manifest.json
@@ -242,5 +242,6 @@
       },
       "displayName": "cdkappref-build-core-prod-pipeline/cdkappref-prod/webapp"
     }
-  }
+  },
+  "minimumCliVersion": "2.1005.0"
 }
